--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -6,5 +6,6 @@
 ^cran-comments\.md$ # Comments for CRAN submission
 ^NEWS\.md$          # A news file written in Markdown
 ^\.travis\.yml$     # Used for continuous integration testing with travis
-^./archive/*$
+^archive/*$
 ^.*\.DS\_Store.*$
+^temp/*$
