update the package to pass check
license
imports packages
path search from loc of package
intetgration folder creation

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -11,4 +11,4 @@
 ^temp/*$
 ^tests/workflowtest_internal/*$
 ^internal_data/*$
-^inst/extdata/enscode/*$
+^inst/extdata/internal_data/pre_input_testplotting/*$
