--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,3 +32,9 @@ export(tabparse)
 export(template_exp_data)
 export(template_spec_reac)
 export(update_history)
+import(cowplot)
+import(ggplot2)
+import(lhs)
+import(magrittr)
+import(scales)
+import(stringr)
